--- a/source/ProgramacaoVisual/WebMvc/Views/Pessoas/Index.cshtml
+++ b/source/ProgramacaoVisual/WebMvc/Views/Pessoas/Index.cshtml
@@ -4,19 +4,29 @@
     ViewData["Title"] = "Error";
 }
 
-<table>
+<h2>Index</h2>
+
+<p><a asp-action="Create">Create New </a></p>
+<table class="table table-striped table-bordered ">
     <thead>
         <tr>
-            <th>Id</th>
             <th>Nome</th>
+            <th>Ações</th>
         </tr>
     </thead>
     <tbody>
         @foreach(var item in Model.Items)
         {
             <tr>
-                <td>@item.Id</td>
                 <td>@item.Nome</td>
+                <td>
+                <a asp-action="Edit"
+                asp-route-id="@item.Id">Edit</a>
+                <a asp-action="Details"
+                asp-route-id="@item.Id">Details</a>
+                <a asp-action="Delete"
+                asp-route-id="@item.Id">Delete</a>
+                </td>
             </tr>
         }
     </tbody>
